tests/baselines/reference/inheritanceStaticPropertyOverridingMethod.errors.txt
tests/cases/compiler/inheritanceStaticPropertyOverridingMethod.ts(7,7): error TS2417: Class static side 'typeof b' incorrectly extends base class static side 'typeof a'.
  Types of property 'x' are incompatible.
    Type 'string' is not assignable to type '() => string'.
      Signature '(): string' has no corresponding signature in 'String'


==== tests/cases/compiler/inheritanceStaticPropertyOverridingMethod.ts (1 errors) ====
    class a {
        static x() {
            return "20";
        }
    }
    
    class b extends a {
          ~
!!! error TS2417: Class static side 'typeof b' incorrectly extends base class static side 'typeof a'.
!!! error TS2417:   Types of property 'x' are incompatible.
!!! error TS2417:     Type 'string' is not assignable to type '() => string'.
!!! error TS2417:       Signature '(): string' has no corresponding signature in 'String'
        static x: string;
    }